# EasyOCR

.github/workflows/: build-gui.yml
easyocr/: cli.py
gui/: Cargo.toml
gui/src/: app.rs  i18n.rs  main.rs  ocr.rs  settings.rs
