[package]
name = "easyocr-gui"
version = "0.1.0"
edition = "2021"
description = "A beautiful cross-platform GUI for EasyOCR"
license = "Apache-2.0"

[[bin]]
name = "easyocr-gui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
screenshots = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
